--- a/src/App.css
+++ b/src/App.css
@@ -19,6 +19,13 @@ nav {
   text-decoration: none;
 }
 
+nav button {
+  background-color: black;
+  color: white;
+  border: none;
+  font-size: 25px;
+}
+
 a {
   color: white;
   text-decoration: none;
